--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
@@ -20,12 +20,6 @@
 <script type="text/javascript" src="/static/ndf/bower_components/tipped-4.5.5-light/tipped.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/tipped-4.5.5-light/tipped.css" />
 
-<script type='text/javascript'>
-$(document).ready(function() {
-  Tipped.create('.boxes .box');
-});
-</script>
-
 <form method="post" action="" name="{{class_name}}" id="{{class_name}}">
 {% csrf_token %}
 {% if translate %}
@@ -55,7 +49,6 @@ $(document).ready(function() {
 			<div style="display:table-cell;"> 
 			<font size="3"> {{list}} </font> 
 			</div>
-
 {% get_input_fields class_structure|get_dict_item:list list translate  %}
 </div>
 {% endif %}
@@ -111,7 +104,7 @@ $(document).ready(function() {
 	</dd>
 	<dd class="accordion-navigation">
 		<a href="#contentlist">Content</a>
-		<div id="contentlist" class="content">
+		<div id="contentlist" class="content" >
 			{% for list in contentlist %}
 			<div class="medium-12 columns">
 	{# {% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org|default_if_none:"" node_id=node.pk %} #}
@@ -146,8 +139,8 @@ $(document).ready(function() {
 		<a href="#dependencylist">Dependency</a>
 		<div id="dependencylist" class="content">
 			{% for list in dependencylist %}
-			<div style="display:table-row;">
-	<div style="display:table-cell;"> 
+			<div style="display:table-row;" class='boxes' >
+	<div style="display:table-cell;" title="{% for key,value in help_tip.iteritems %}{% if list == key %}{{value}}{% endif %}{% endfor %} " class='box' > 
 		<font size="3"> {{list}}</font> 
 	</div>
 	{% get_input_fields class_structure|get_dict_item:list list translate  %}
@@ -159,8 +152,8 @@ $(document).ready(function() {
 		<a href="#options">Options</a>
 		<div id="options" class="content">
 			{% for list in options %}
-			<div style="display:table-row;">
-				<div style="display:table-cell;"> 
+			<div style="display:table-row;" class='boxes' >
+				<div style="display:table-cell;" title="{% for key,value in help_tip.iteritems %}{% if list == key %}{{value}}{% endif %}{% endfor %} " class='box' > 
 					<font size="3"> {{list}}</font> 
 				</div>
 				{% get_input_fields class_structure|get_dict_item:list list translate  %}
@@ -239,5 +232,10 @@ $(document).ready(function() {
 {% block head %} 
 <script type="text/javascript">
 var type_list = []
+
+$(document).ready(function() {
+  Tipped.create('.boxes .box');
+});
+
 </script>
 {% endblock %}
